Add Span element example

--- a/8. Inline & Block Elements in HTML/style.css
+++ b/8. Inline & Block Elements in HTML/style.css
@@ -5,3 +5,11 @@ p {
 a {
     background-color: rgb(227, 99, 99);
 }
+
+div {
+    background-color: rgb(111, 111, 204);
+}
+
+span {
+    background-color: rgb(163, 161, 169);
+}
